fix for comments box on mobile view

--- a/sass/includes/_feedback.scss
+++ b/sass/includes/_feedback.scss
@@ -67,3 +67,8 @@
         display: none;
     }
 }
+
+
+#id_comment {
+    width:100%;
+}
